Revision history for {{$dist->name}}

{{$NEXT}}

0.012     2014-04-28 10:27:28-04:00 America/New_York
        - no changes from trial release

0.011     2014-04-02 20:54:48-04:00 America/New_York (TRIAL RELEASE)
        - respect version ranges in requirements
          (if you require (>1, <2) and the CPAN only has v3, check fails

0.010     2013-12-25 22:22:25-0500 America/New_York
          fix github links

0.009     2013-05-29 19:11:54 America/New_York
          fix documentation: CPANIDX, not CPANMetaDB

0.008     2013-01-25 13:24:30 America/New_York
          RT#82883: lazy load dependencies (Thanks, Olivier Mengué)

          RT#82886: use JSON instead of JSON::PP (Thanks, Olivier Mengué)

0.007     2011-11-07 17:58:42 America/New_York
          switch from cpanmetadb to cpanidx while cpanmetadb is (temporarily?)
          broken

0.006     2011-11-03 10:15:25 America/New_York
          add the skips parameter (Thanks, Christopher J. Madsen!)

0.005     2011-09-08 08:35:50 America/New_York
          the LWP::UserAgent should now respect HTTP proxies specified by the
          environment (Thanks, Piers Cawley!)

0.004     2011-08-18 11:05:31 America/New_York
          the plugin now complains if CPAN has the package you want, but not of
          the required version or higher

0.003     2011-05-20 08:59:43 America/New_York
          "Config" is never considered an unindexed prereq

0.002     2011-02-05 15:14:56 America/New_York
          "perl" is never considered an unindexed prereq

0.001     2011-02-04 18:09:37 America/New_York